--- a/W2/W-5/first.ipynb
+++ b/W2/W-5/first.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "843cfa5e",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "57436547",
    "metadata": {},
    "outputs": [
@@ -146,6 +146,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Iteration 0: (Initial) X = 0.000000\n",
+      "Iteration 1: (Initial) X = -0.400000\n",
+      "Iteration 2: (Initial) X = -0.720000\n",
+      "Iteration 3: (Initial) X = -0.976000\n",
+      "Iteration 4: (Initial) X = -1.180800\n",
+      "Iteration 5: (Initial) X = -1.344640\n",
+      "Iteration 6: (Initial) X = -1.475712\n",
+      "Iteration 7: (Initial) X = -1.580570\n",
+      "Iteration 8: (Initial) X = -1.664456\n",
+      "Iteration 9: (Initial) X = -1.731565\n",
+      "Iteration 10: (Initial) X = -1.785252\n",
+      "Iteration 11: (Initial) X = -1.828201\n",
+      "Iteration 12: (Initial) X = -1.862561\n",
+      "Iteration 13: (Initial) X = -1.890049\n",
+      "Iteration 14: (Initial) X = -1.912039\n",
+      "Iteration 15: (Initial) X = -1.929631\n",
+      "Iteration 16: (Initial) X = -1.943705\n",
+      "Iteration 17: (Initial) X = -1.954964\n",
+      "Iteration 18: (Initial) X = -1.963971\n",
+      "Iteration 19: (Initial) X = -1.971177\n",
       "The minimum point is at Iteration 19: x = -1.976941569907863\n"
      ]
     }
@@ -153,13 +173,52 @@
    "source": [
     "x0 = 0  # Initial guess\n",
     "minimum, iteration = gradient_descent(f, df, x0, learning_rate=0.1, max_iterations=20)\n",
-    "print(f\"The minimum point is at Iteration {iteration}: x = {minimum}\")\n"
+    "print(f\"The minimum point is at Iteration {iteration}: x = {minimum}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b810d875",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (209891211.py, line 20)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[28]\u001b[39m\u001b[32m, line 20\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mThe minimum point is at Iteration 19: x = -1.976941569907863\u001b[39m\n        ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "fig, axes = plt.subplots(1, 2, figsize=(16, 5))\n",
+    "\n",
+    "# Plot: Iteration vs X\n",
+    "axes[0].plot(history['iterations'], history['x'], color='teal', marker='o', linewidth=2)\n",
+    "axes[0].set_title(\"Iteration vs X\", fontsize=16)\n",
+    "axes[0].set_xlabel(\"Iteration\", fontsize=12)\n",
+    "axes[0].set_ylabel(\"X value\", fontsize=12)\n",
+    "axes[0].grid(True)\n",
+    "\n",
+    "# Plot: Iteration vs Cost\n",
+    "axes[1].plot(history['iterations'], history['cost'], color='crimson', marker='s', linewidth=2)\n",
+    "axes[1].set_title(\"Iteration vs Cost Function\", fontsize=16)\n",
+    "axes[1].set_xlabel(\"Iteration\", fontsize=12)\n",
+    "axes[1].set_ylabel(\"Cost (f(x))\", fontsize=12)\n",
+    "axes[1].grid(True)\n",
+    "\n",
+    "plt.suptitle(\"Gradient Descent Convergence Plots\", fontsize=18, fontweight='bold')\n",
+    "plt.tight_layout(rect=[0, 0, 1, 0.95])\n",
+    "plt.show()\n",
+    "The minimum point is at Iteration 19: x = -1.976941569907863"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b810d875",
+   "id": "568a71ca",
    "metadata": {},
    "outputs": [],
    "source": []
